[package]
name = "riba-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "brotli"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
futures-util = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version="1.7.0", features = ["v4", "fast-rng"] }
url = "2.5.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
